--- a/styles.css
+++ b/styles.css
@@ -1,132 +1,268 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    margin: 0;
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  width: 75%;
+}
+header {
+  width: 100%;
+  height: 10%;
+}
+
+#logo {
+  display: flex;
+  float: left;
+}
+
+#logo h2 {
+  width: 73px;
+  height: 25px;
+  font-family: Lato - Extra Bold;
+  color: #011847;
+  font-size: 32px;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 6.33px;
+  margin: 0;
+  padding-top: 12px;
+}
+#logo h3 {
+  text-align: center;
+  width: 74px;
+  height: 17px;
+  font-family: Lato;
+  color: #84bc22;
+  font-size: 18px;
+  font-weight: 400;
 }
 
 .navbar {
-    overflow: hidden;
-    background-color: #333;
-    font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  line-height: 50px;
+  justify-content: space-between;
+  overflow: hidden;
+  background-color: white;
+  text-decoration: black;
+  font-family: Lato;
+}
+
+.nav-items {
+  display: flex;
+  vertical-align: middle;
 }
 
 .navbar a {
-    float: left;
-    font-size: 16px;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
+  float: left;
+  text-transform: uppercase;
+  font-size: 16px;
+  color: black !important;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
 }
 
 .my_dropdown {
-    float: left;
-    overflow: hidden;
+  float: left;
+  overflow: hidden;
 }
 
 .my_dropdown .dropbtn {
-    font-size: 16px;
-    border: none;
-    outline: none;
-    color: white;
-    padding: 14px 16px;
-    background-color: inherit;
-    font: inherit;
-    margin: 0;
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: black;
+  text-transform: uppercase;
+  padding: 14px 16px;
+  background-color: inherit;
+  font: inherit;
+  margin: 0;
 }
 
 .navbar a:hover,
 .my_dropdown:hover .dropbtn {
-    background-color: red;
+  background-color: #262a32;
+  border-color: #84bc32;
+}
+
+#logo a:hover {
+  background-color: #ffffff;
+  border-color: #ffffff;
 }
 
 .dropdown-content {
-    display: none;
-    line-height: 1;
-    position: absolute;
-    background-color: #f9f9f9;
-    width: 100%;
-    left: 0;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
+  display: none;
+  flex-flow: column wrap;
+  line-height: 1;
+  position: absolute;
+  background-color: #262a32;
+  width: 100%;
+  left: 0;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
 }
 
 .dropdown-content .header {
-    background: red;
-    padding: 16px;
-    color: white;
+  background: #262a32;
+  padding: 16px;
+  color: black;
 }
 
 .my_dropdown:hover .dropdown-content {
-    display: block;
+  display: block;
 }
-
 
 /* Create three equal columns that floats next to each other */
 
 .dropdown-column {
-    float: left;
-    width: 25%;
-    padding: 10px;
-    background-color: #ccc;
-    height: 350px;
+  float: left;
+  width: 20%;
+  padding: 10px;
+  background-color: #262a32;
+  height: 350px;
+}
+
+.dropdown-column {
+  color: black;
 }
 
 .dropdown-column a {
-    float: none;
-    color: black !important;
-    padding: 12px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
+  float: none;
+  font-family: Lato;
+  color: #ffffff;
+  padding: 12px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
 }
 
+.a {
+  color: black;
+}
 .dropdown-column a:hover {
-    background-color: #ddd;
+  background-color: #262a32;
 }
-
 
 /* Clear floats after the columns */
 
 .dropdown-row:after {
-    content: "";
-    display: table;
-    clear: both;
+  display: table;
+  clear: both;
 }
 
 .dropdown-row-header {
-    display: flex;
-    justify-content: space-around;
-    background: #ccc;
+  display: flex;
+  justify-content: space-around;
+  background: #262a32;
+  color: white;
+  text-transform: uppercase;
+  text-transform: bold;
 }
-
 
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
 
 @media screen and (max-width: 600px) {
-    .dropdown-column {
-        width: 100%;
-        height: auto;
-    }
+  .dropdown-column {
+    width: 100%;
+    height: auto;
+  }
 }
-
 
 /* Carousel */
 
-.mySlides {
-    display: none
+.section-basic {
+  display: flex;
 }
 
-.w3-left,
-.w3-right,
-.w3-badge {
-    cursor: pointer
+.static-background {
+  display: flex;
+  justify-content: space-around;
+  background-color: #45413e;
+  padding: 30px;
 }
 
-.w3-badge {
-    height: 13px;
-    width: 13px;
-    padding: 0
+.static-feature {
+  display: block;
+  color: white;
+}
+
+.static-feature img {
+  width: 59px;
+  height: 67px;
+}
+
+.static-text {
+  display: flex;
+  color: gray;
+}
+.slick-slide {
+  height: 500px;
+  width: 500px;
+  box-sizing: border-box;
+}
+
+.slide-img {
+  height: 500px;
+}
+
+.slide-img h2 {
+  text-align: left;
+}
+.slide-img h3 {
+  text-align: center;
+}
+
+.slide-img h4 {
+  text-align: right;
+}
+.slide-wrapper {
+  display: block;
+  height: 500px;
+  width: 1170px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 30px;
+}
+.cookie-container {
+  position: fixed;
+  bottom: -100%;
+  left: 0;
+  right: 0;
+  background: white;
+  color: #45413e;
+  padding: 0 32px;
+  box-shadow: 0 -2px 16px rgba(47, 54, 64, 0.39);
+
+  transition: 400ms;
+}
+
+.cookie-container h2 {
+  text-transform: bold;
+  color: #84bc22;
+}
+
+.cookie-container.active {
+  bottom: 0;
+}
+
+.cookie-container a {
+  color: #84bc22;
+}
+
+.cookie-btn {
+  background: #84bc22;
+  border: 0;
+  color: #f5f6fa;
+  padding: 12px 48px;
+  font-size: 18px;
+  margin-bottom: 16px;
+  border-radius: 8px;
+  cursor: pointer;
+  text-transform: uppercase;
 }
