--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,6 @@ body {
   padding: 0;
 }
 
-img {
-  width: 75%;
-}
 header {
   width: 100%;
   height: 10%;
@@ -174,32 +171,6 @@ header {
 }
 
 /* Carousel */
-
-.section-basic {
-  display: flex;
-}
-
-.static-background {
-  display: flex;
-  justify-content: space-around;
-  background-color: #45413e;
-  padding: 30px;
-}
-
-.static-feature {
-  display: block;
-  color: white;
-}
-
-.static-feature img {
-  width: 59px;
-  height: 67px;
-}
-
-.static-text {
-  display: flex;
-  color: gray;
-}
 .slick-slide {
   height: 500px;
   width: 500px;
@@ -229,6 +200,8 @@ header {
   margin-right: auto;
   padding-top: 30px;
 }
+
+/*Cookies */
 .cookie-container {
   position: fixed;
   bottom: -100%;
@@ -265,4 +238,196 @@ header {
   border-radius: 8px;
   cursor: pointer;
   text-transform: uppercase;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+/* Navbar */
+.topnav {
+  overflow: hidden;
+  background-color: #e9e9e9;
+}
+
+/* Navbar links */
+.topnav a {
+  float: left;
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Navbar links on mouse-over */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Active/current link */
+.topnav a.active {
+  background-color: #2196f3;
+  color: white;
+}
+
+/* Style the input container */
+.topnav .login-container {
+  float: right;
+}
+
+/* Style the input field inside the navbar */
+.topnav input[type="text"] {
+  padding: 6px;
+  margin-top: 8px;
+  font-size: 17px;
+  border: none;
+  width: 150px; /* adjust as needed (as long as it doesn't break the topnav) */
+}
+
+/* Style the button inside the input container */
+.topnav .login-container button {
+  float: right;
+  padding: 6px;
+  margin-top: 8px;
+  margin-right: 16px;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
+
+.topnav .login-container button:hover {
+  background: #ccc;
+}
+
+/* Add responsiveness - On small screens, display the navbar vertically instead of horizontally */
+@media screen and (max-width: 600px) {
+  .topnav .login-container {
+    float: none;
+  }
+  .topnav a,
+  .topnav input[type="text"],
+  .topnav .login-container button {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
+  }
+  .topnav input[type="text"] {
+    border: 1px solid #ccc;
+  }
+}
+
+/* User login and Search */
+
+.search-icon {
+  float: right;
+  display: flex;
+  width: 5%;
+}
+.user-icon {
+  float: right;
+  display: flex;
+  width: 5%;
+}
+.container {
+  padding: 2rem 0rem;
+}
+
+@media (min-width: 576px) {
+  .modal-dialog {
+    max-width: 400px;
+  }
+  @media (min-width: 576px) {
+    .modal-content {
+      padding: 1rem;
+    }
+  }
+  .close {
+    margin-top: -1.5rem;
+  }
+
+  .modal-header {
+    margin-top: -1.5rem;
+  }
+
+  .form-title {
+    margin: -2rem 0rem 2rem;
+  }
+
+  .btn-round {
+    border-radius: 3rem;
+  }
+
+  .delimiter {
+    padding: 1rem;
+  }
+
+  .btn {
+    margin: 0 0.5rem 1rem;
+  }
+
+  .social-buttons {
+    margin: 0 0.5rem 1rem;
+  }
+
+  .signup-section {
+    padding: 0.3rem 0rem;
+  }
+
+  /*Popular items */
+
+  /*Banner */
+  .banner-picture {
+    width: 100%;
+  }
+
+  /*Featured products */
+
+  .feat-prod {
+    display: flex;
+    justify-content: space-around;
+
+    padding: 40px;
+  }
+  .static-background-p {
+    display: block;
+    background-color: rgba(38, 42, 50);
+    padding: 10px;
+  }
+  .static-img {
+    display: grid;
+    width: 20%;
+  }
+
+  .section-basic {
+    display: flex;
+  }
+
+  .static-background {
+    display: flex;
+    justify-content: space-around;
+    background-color: #45413e;
+    padding: 30px;
+  }
+
+  .static-feature {
+    display: block;
+    color: white;
+  }
+
+  .static-feature img {
+    width: 59px;
+    height: 67px;
+  }
+
+  .static-text {
+    display: flex;
+    color: gray;
+  }
 }
