--- a/styles.css
+++ b/styles.css
@@ -259,8 +259,7 @@ header {
 }
 .slide-wrapper {
   display: block;
-  height: 500px;
-  width: 1170px;
+  width: 80vw;
   text-align: center;
   margin-left: auto;
   margin-right: auto;
@@ -409,125 +408,118 @@ header {
   .modal-dialog {
     max-width: 400px;
   }
-  @media (min-width: 576px) {
-    .modal-content {
-      padding: 1rem;
-    }
-  }
-  .close {
-    margin-top: -1.5rem;
-  }
-
-  .modal-header {
-    margin-top: -1.5rem;
-  }
-
-  .form-title {
-    margin: -2rem 0rem 2rem;
-  }
-
-  .btn-round {
-    border-radius: 3rem;
-  }
-
-  .delimiter {
+  .modal-dialog .modal-content {
     padding: 1rem;
   }
+}
 
-  .btn {
-    margin: 0 0.5rem 1rem;
-  }
+.modal-header .close {
+  margin-top: -1.5rem;
+}
 
-  .social-buttons {
-    margin: 0 0.5rem 1rem;
-  }
+.modal-header {
+  margin-top: -1.5rem;
+}
 
-  .signup-section {
-    padding: 0.3rem 0rem;
-  }
+.form-title {
+  margin: -2rem 0rem 2rem;
+}
 
-  /*Popular items */
-  .section-basic {
-    background-color: rgba(38, 42, 50);
-    display: grid;
-  }
+.btn-round {
+  border-radius: 3rem;
+}
 
-  /*Banner */
+.delimiter {
+  padding: 1rem;
+}
 
-  .banner-wrapper {
-    background-color: rgba(38, 42, 50);
-    position: relative;
-    padding: 5px;
-  }
+.social-buttons .btn {
+  margin: 0 0.5rem 1rem;
+}
 
-  .banner-txt p {
-    position: absolute;
-    font-family: "Myriad Pro";
-    font-size: 50px;
-    color: #ffffff;
-    font-weight: 500px;
-    padding-left: 20px;
-    padding-right: 20px;
-    bottom: 20px;
-    right: 20px;
-  }
+.social-buttons {
+  margin: 0 0.5rem 1rem;
+}
 
-  /*Featured products */
+.signup-section {
+  padding: 0.3rem 0rem;
+}
 
-  .feat-products {
-    display: flex;
-    justify-content: space-around;
-    background-color: rgba(38, 42, 50);
-  }
-  .feat-products p {
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-  }
+/*Banner */
 
-  .static-background-p {
-    display: flex;
-    background-color: rgba(38, 42, 50);
-    padding: 10px;
-  }
-  .static-img p {
-    display: flex;
-    justify-content: flex-end;
-    flex-basis: 25%;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
+.banner-wrapper {
+  background-color: rgba(38, 42, 50);
+  position: relative;
+  padding: 5px;
+}
 
-  .static-img h3 {
-    display: flex;
-    color: green;
-  }
+.banner-txt p {
+  position: absolute;
+  font-family: "Myriad Pro";
+  font-size: 50px;
+  color: #ffffff;
+  font-weight: 500px;
+  padding-left: 20px;
+  padding-right: 20px;
+  bottom: 20px;
+  right: 20px;
+}
 
-  .section-basic {
-    display: flex;
-  }
+/*Featured products */
 
-  .static-background {
-    display: flex;
-    justify-content: space-around;
-    background-color: #45413e;
-    padding: 30px;
-  }
+.feat-products {
+  display: flex;
+  justify-content: space-around;
+  background-color: rgba(38, 42, 50);
+}
+.feat-products p {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+}
 
-  .static-feature {
-    display: block;
-    color: white;
-  }
+.static-background-p {
+  display: flex;
+  background-color: rgba(38, 42, 50);
+  padding: 10px;
+}
+.static-img p {
+  display: flex;
+  justify-content: flex-end;
+  flex-basis: 25%;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
 
-  .static-feature img {
-    width: 59px;
-    height: 67px;
-  }
+.static-img h3 {
+  display: flex;
+  color: green;
+}
 
-  .static-text {
-    display: flex;
-    color: gray;
-  }
+.section-basic {
+  display: flex;
+}
+
+.static-background {
+  display: flex;
+  justify-content: space-around;
+  background-color: #45413e;
+  padding: 30px;
+}
+
+.static-feature {
+  display: block;
+  color: white;
+}
+
+.static-feature img {
+  width: 59px;
+  height: 67px;
+}
+
+.static-text {
+  display: flex;
+  color: gray;
 }
 
 .footer-items {
@@ -564,4 +556,87 @@ header {
 .copyright {
   display: flex;
   padding: 50px;
+}
+
+/*Popular items */
+
+.popular-items {
+  display: flex;
+  position: relative;
+  width: 271px;
+  justify-content: center;
+  vertical-align: center;
+  flex-direction: column;
+  background-color: #816fca;
+  background-image: linear-gradient(to top, #1cc167 0%, #2ed3a2 100%);
+}
+
+#wrapper {
+  background-image: url("./img/pitem_1.png");
+  background-image: url("./img/pitem_1.png"), linear-gradient(green);
+  background-repeat: no-repeat;
+  background-size: auto;
+  width: 271px;
+  height: 260px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.popular-items:hover #wrapper {
+  opacity: 0.1;
+  -webkit-transition: opacity 0.8s ease-in;
+  -moz-transition: opacity 0.8s ease-in;
+  -ms-transition: opacity 0.8s ease-in;
+  -o-transition: opacity 0.8s ease-in;
+  transition: opacity 0.8s ease-in;
+}
+.popular-items:hover #actions-wrapper {
+  z-index: 10;
+
+  opacity: 1;
+  -webkit-transition: opacity 0.8s ease-in;
+  -moz-transition: opacity 0.8s ease-in;
+  -ms-transition: opacity 0.8s ease-in;
+  -o-transition: opacity 0.8s ease-in;
+  transition: opacity 0.8s ease-in;
+}
+
+.image-wrapper {
+  height: 70px;
+  width: 70px;
+  border-radius: 50%;
+  background-color: white;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  opacity: 1;
+}
+
+#actions-wrapper {
+  display: flex;
+  opacity: 0;
+  width: 271px;
+  height: 260px;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+#details-wrapper {
+  background-color: white;
+}
+
+.popular-items:hover #details-wrapper {
+  opacity: 0.1;
+  -webkit-transition: opacity 0.8s ease-in;
+  -moz-transition: opacity 0.8s ease-in;
+  -ms-transition: opacity 0.8s ease-in;
+  -o-transition: opacity 0.8s ease-in;
+  transition: opacity 0.8s ease-in;
 }
